Archive2/f0/1372cc9e1d44a0/output
main.cpp:11:14: error: expected '<' after 'template'
    template std::enable_if<(x == y), void>::type stuff(std::string arg1, std::string arg2)
             ^
1 error generated.
